--- a/app/src/main/res/layout/itemrv.xml
+++ b/app/src/main/res/layout/itemrv.xml
@@ -1,30 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
 
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_width="fill_parent"
+    android:layout_height="100dp"
+    android:layout_gravity="center"
+    android:layout_margin="5dp"
+    app:cardElevation="5dp">
 
-        <android.support.v7.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-            android:elevation="2dp"
-        android:layout_height="150dp">
+        android:layout_height="match_parent">
 
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp">
 
             <android.support.v7.widget.AppCompatTextView
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:id="@+id/txtcard"
+                android:id="@+id/nbmatch"
+
                 android:layout_width="wrap_content"
-                android:paddingLeft="20dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="15" />
 
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_gravity="left|center_vertical"
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/nbmatchlive"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/nbmatch"
 
-                android:id="@+id/imgcard"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-        </android.support.v7.widget.CardView>
+                android:paddingRight="5dp"
+                android:text="15"
+                android:textColor="@android:color/holo_red_dark" />
+        </LinearLayout>
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/imgcard"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:paddingTop="5dp"
+            android:paddingLeft="7dp" />
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toRightOf="@id/imgcard"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/txtcardcompt"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:textStyle="bold" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/txtcardcountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+        </LinearLayout>
 
 
-</LinearLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
+
+
