--- a/app/src/main/res/layout/custom_tab_icon2.xml
+++ b/app/src/main/res/layout/custom_tab_icon2.xml
@@ -1,5 +1,4 @@
-<recorder.appss.cool.recyclertest.TintableImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<recorder.appss.cool.recyclertest.TintableImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="48dp"
     android:layout_height="48dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
