--- a/app/src/main/res/layout/demo_custom_tab_icons2.xml
+++ b/app/src/main/res/layout/demo_custom_tab_icons2.xml
@@ -1,5 +1,4 @@
-<com.ogaclejapan.smarttablayout.SmartTabLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ogaclejapan.smarttablayout.SmartTabLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/viewpagertab"
     android:layout_width="wrap_content"
@@ -14,5 +13,4 @@
     app:stl_indicatorThickness="36dp"
     app:stl_indicatorWithoutPadding="true"
     app:stl_underlineColor="@color/transparent"
-    app:stl_underlineThickness="0dp"
-    />
+    app:stl_underlineThickness="0dp" />
