--- a/app/src/main/res/layout/header_layout_competetion.xml
+++ b/app/src/main/res/layout/header_layout_competetion.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true">
-    <TextView
-        android:text="TextView"
-        android:textColor="@android:color/holo_red_dark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/allnblive"
-        android:layout_weight="1"
-         />
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/allnb"
-        android:layout_weight="1"
-       />
-</LinearLayout>
+
+        <TextView
+            android:text="TextView"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/allnblive"
+            android:layout_weight="1" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/allnb"
+            android:layout_weight="1" />
+    </LinearLayout>
+
     <TextView
         android:text="All Game"
         android:layout_width="wrap_content"
