--- a/app/src/main/res/layout/section_divider_matchs_live.xml
+++ b/app/src/main/res/layout/section_divider_matchs_live.xml
@@ -16,7 +16,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/compet_flag_h" />
+        android:id="@+id/compet_flag_div" />
 
     <TextView
         android:paddingLeft="5dp"
@@ -24,8 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:id="@+id/compet_name_h"
-        android:layout_toRightOf="@id/compet_flag_h" />
+        android:id="@+id/compet_name_div"
+        android:layout_toRightOf="@id/compet_flag_div" />
 
 </RelativeLayout>
     </android.support.v7.widget.CardView>
