--- a/app/src/main/res/layout/fragment_live_match.xml
+++ b/app/src/main/res/layout/fragment_live_match.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="recorder.appss.cool.recyclertest.Tab_fragment_live_match">
+    tools:context="recorder.appss.cool.ui.fragment.Tab_fragment_live_match">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list_live"
