--- a/app/src/main/res/layout/header_matchs_competetion.xml
+++ b/app/src/main/res/layout/header_matchs_competetion.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_centerHorizontal="true"
     app:cardElevation="8dp">
 
 <RelativeLayout
