--- a/app/src/main/res/layout/compet_list_item.xml
+++ b/app/src/main/res/layout/compet_list_item.xml
@@ -9,74 +9,57 @@
     android:layout_gravity="center"
     android:layout_margin="5dp"
     app:cardElevation="5dp">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
-
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:orientation="vertical"
             android:paddingRight="5dp"
             android:paddingTop="5dp">
-
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/nbmatch"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="15" />
-
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/nbmatchlive"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/nbmatch"
-
                 android:paddingRight="5dp"
                 android:text="15"
                 android:textColor="@android:color/holo_red_dark" />
         </LinearLayout>
-
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/imgcard"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:paddingTop="5dp"
-            android:paddingLeft="7dp" />
-
+            android:paddingLeft="7dp"
+            android:paddingTop="5dp" />
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_toRightOf="@id/imgcard"
             android:orientation="vertical">
-
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/txtcardcompt"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:textStyle="bold" />
-
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/txtcardcountry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
-
         </LinearLayout>
-
-
     </RelativeLayout>
 </android.support.v7.widget.CardView>
 
