--- a/app/src/main/res/layout/fragment_live_match.xml
+++ b/app/src/main/res/layout/fragment_live_match.xml
@@ -1,8 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="recorder.appss.cool.ui.fragment.Tab_fragment_live_match">
+    tools:context="recorder.appss.cool.ui.fragment.TabFragmentLiveMatch">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list_live"
@@ -11,4 +12,4 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
