--- a/app/src/main/res/layout/fragment_matchs_compet_list.xml
+++ b/app/src/main/res/layout/fragment_matchs_compet_list.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,4 +12,4 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
