--- a/app/src/main/res/layout/fragment_matchs_compet_list.xml
+++ b/app/src/main/res/layout/fragment_matchs_compet_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="recorder.appss.cool.ui.fragment.FragmentMatchsCompet">
+    tools:context="recorder.appss.cool.ui.fragment.FragmentMatchCompetition">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_match_compr"
